--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1028</width>
-    <height>731</height>
+    <width>947</width>
+    <height>623</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -103,26 +103,8 @@
                <height>350</height>
               </size>
              </property>
-             <property name="styleSheet">
-              <string notr="true">#pushButton_Rozpocznij{
-background-color: transparent;
-border-image: url(:/QT_layout/Rozpocznij.png);
-background: none;
-border: none;
-background-repeat: none;
-}
-#pushButton_Rozpocznij:pressed{
-border-image: url(:/QT_layout/Rozpocznij_pressed.png);
-}</string>
-             </property>
              <property name="text">
-              <string/>
-             </property>
-             <property name="iconSize">
-              <size>
-               <width>16</width>
-               <height>16</height>
-              </size>
+              <string>PushButton</string>
              </property>
             </widget>
            </item>
@@ -158,39 +140,6 @@ border-image: url(:/QT_layout/Rozpocznij_pressed.png);
            <property name="bottomMargin">
             <number>0</number>
            </property>
-           <item>
-            <spacer name="horizontalSpacer_3">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item>
-            <widget class="QLabel" name="label">
-             <property name="text">
-              <string>Insert Cup</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <spacer name="horizontalSpacer_4">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
           </layout>
          </widget>
          <widget class="QWidget" name="page_3"/>
@@ -352,6 +301,25 @@ border-image: url(:/QT_layout/Button_Back_pressed.png);
           </size>
          </property>
         </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_next">
+         <property name="minimumSize">
+          <size>
+           <width>200</width>
+           <height>60</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>200</width>
+           <height>60</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>PushButton</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
